fix: fix for section scroll on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -70,6 +70,15 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
+#smooth-wrapper {
+	height: 100%;
+	overflow: hidden;
+}
+
+#smooth-content {
+	min-height: 100vh;
+}
+
 ::-webkit-scrollbar {
 	width: 5px;
 	height: 8px;
